--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-redux": "^7.2.1",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "rfdc": "^1.1.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
